# libxsmm

./: .abi.txt  .analyze.sh  .buildkite.env  .clang-format  .codecov  .codecov.env  .codefile  .coverage  .env  .flock.sh  .fullci  .gitattributes  .gitconfig  .gitignore  .gitmodules  .markdownlint.json  .mktmp.sh  .readthedocs.yml  .scan.sh  .state.sh  .test-cnn.yml  .test-conv.yml  .test-dnn-fullci  .test-dnn.yml  .test-fc.yml  .test-rnn-fullci  .test-rnn.yml  .travis.env  .travis.sh  .travis.yml  BUILD  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  LICENSE.md  LICENSE.txt  Makefile  Makefile.cp2k  (+19 more)
.env/: buildkite.env  codecov.env  snb-85_clang-38.env  snb-85_clang-39.env  snb-85_clang-40.env  snb-85_gcc-48.env  snb-85_gcc-49.env  snb-85_gcc-51.env  snb-85_gcc-52.env  snb-85_gcc-53.env  snb-85_gcc-54.env  snb-85_gcc-63.env  snb-85_gcc-71.env  snb-85_intel-2015.env  snb-85_intel-2016.env  snb-85_intel-2017.env  snb-85_intel-2018.env  ssr-nfs1_gcc-48.env  ssr-nfs1_gcc-71.env  ssr-nfs1_intel-2015.env  ssr-nfs1_intel-2017.env  travis.env
.env/pcl-tiergarten/: base.env  clang-100.env  clang-110.env  clang-111.env  clang-120.env  clang-130.env  clang-140.env  clang-150.env  clang-160.env  clang-37.env  clang-38.env  clang-39.env  clang-40.env  clang-50.env  clang-60.env  clang-70.env  clang-71.env  gcc-42.env  (+55 more)
.github/: .mailmap  install.sh  post-commit  pre-commit  prepare-commit-msg  version.sh
.gitx/: .mailmap  post-commit  prepare-commit-msg  version.sh
.hooks/: install.sh  post-commit  post-merge  pre-commit  prepare-commit-msg  state.sh  version.sh
.theme/: ford.css  ford.py  ford_hook.py  main.html  requirements.txt  search.js  style.css
documentation/: Doxyfile.in  QemuForRv64.md  README.md  conf.py  cp2k.md  gxm.md  index.md  index.rst  libxsmm-dev.pptm  libxsmm.pptx  libxsmm_api.md  libxsmm_aux.md  libxsmm_be.md  libxsmm_compat.md  libxsmm_dl.md  libxsmm_dnn.md  libxsmm_fortran.md  libxsmm_mm.docx  libxsmm_mm.md  libxsmm_perf.md  libxsmm_prof.md  libxsmm_qna.md  libxsmm_samples.md  libxsmm_scripts.md  libxsmm_tpp.md  libxsmm_tune.md  libxsmm_valid.md  tensorflow.md  tensorflow.pptm  tensorflow.pptx  tfserving.md
ide/: _configure.bat  _vs.bat  _vs2013.bat  _vs2013.sln  _vs2015.bat  _vs2015.sln  _vs2017.bat  _vs2017.sln  _vs2019-configure.bat  _vs2019.bat  _vs2019.sln  _vs2022.bat  _vs2022.sln  libxsmm.vcxproj  libxsmm.vcxproj.filters  libxsmm_generator_convolution_driver.vcxproj  libxsmm_generator_convolution_winograd_driver.vcxproj  libxsmm_generator_gemm_driver.vcxproj  libxsmmext.vcxproj  libxsmmext.vcxproj.filters  libxsmmnoblas.vcxproj  libxsmmnoblas.vcxproj.filters
include/: libxsmm.0  libxsmm.1  libxsmm.2  libxsmm.h  libxsmm_bgemm.h  libxsmm_blkgemm.h  libxsmm_blocked_gemm.h  libxsmm_config.h  libxsmm_conv.h  libxsmm_cpuid.h  libxsmm_dnn.h  libxsmm_dnn_convolution.h  libxsmm_dnn_fullyconnected.h  libxsmm_dnn_fusedbatchnorm.h  libxsmm_dnn_fusedbn.h  libxsmm_dnn_fusedgroupnorm.h  libxsmm_dnn_grucell.h  libxsmm_dnn_lstmcell.h  libxsmm_dnn_optimizer.h  libxsmm_dnn_pooling.h  libxsmm_dnn_rnncell.h  libxsmm_dnn_softmaxloss.h  libxsmm_dnn_tensor.h  libxsmm_fallback.h  libxsmm_frontend.h  libxsmm_fsspmdm.h  libxsmm_generator.h  libxsmm_intrinsics_rv64.h  libxsmm_intrinsics_x86.h  libxsmm_isa.h  libxsmm_knc.h  libxsmm_lpflt_quant.h  libxsmm_macros.h  libxsmm_malloc.h  libxsmm_math.h  libxsmm_memory.h  libxsmm_mhd.h  libxsmm_prefetch.h  libxsmm_rng.h  libxsmm_source.h  (+17 more)
samples/: .gitignore  Makefile  smm-perf.sh  smm.cpp  smm.sh  smm.vcxproj
scripts/: .gitignore  README.md  gen_rv64_asm.sh  generate_ben.py  generate_inc.py  generate_lib.py  generate_main.py  generate_singleigemm.py  generate_src.py  generate_switchingfunction.py  igemm.c  libxsmm.pc.in  libxsmmConfig.cmake  libxsmmConfig.cmake.in  libxsmmConfigVersion.cmake.in  libxsmm_config.py  libxsmm_dispatch.py  libxsmm_impl_mm.py  libxsmm_interface.py  libxsmm_source.sh  libxsmm_specialized.py  libxsmm_staticlib.py  libxsmm_utilities.py  libxsmm_version.sh  libxsmmf.pc.in  release.sh  requirements.txt  tool_addforks.sh  tool_aheadforks.sh  tool_analyze.sh  tool_changelog.sh  tool_checkabi.sh  tool_cpuinfo.sh  tool_debugci.sh  tool_envrestore.sh  tool_getenvars.sh  tool_gitaddforks.sh  tool_gitauthors.sh  tool_gitprune.sh  tool_inspector.sh  (+12 more)
src/: .generator_rv64_instructions.c.swp  GeneratorCSC.cpp  GeneratorCSC.hpp  GeneratorDense.cpp  GeneratorDense.hpp  GeneratorDriver.cpp  Reader.hpp  ReaderCSC.cpp  ReaderCSC.hpp  compact_trsm_dmacros.h  generator_aarch64_instructions.c  generator_aarch64_instructions.h  generator_aarch64_reference.c  generator_aarch64_reference.h  generator_common.c  generator_common.h  generator_common_aarch64.c  generator_common_aarch64.h  generator_common_rv64.c  generator_common_rv64.h  generator_common_x86.c  generator_common_x86.h  generator_compact_aux.c  generator_compact_aux.h  generator_compact_trsm.c  generator_compact_trsm_avx_avx512.c  generator_compact_trsm_avx_avx512.h  generator_compact_xct_avx2_lln.h  generator_convolution.c  generator_convolution_backward_avx2.c  generator_convolution_backward_avx2.h  generator_convolution_backward_avx512.c  generator_convolution_backward_avx512.h  generator_convolution_backward_avx512.h.old  generator_convolution_common.c  generator_convolution_common.h  generator_convolution_forward_avx2.c  generator_convolution_forward_avx2.h  generator_convolution_forward_avx512.c  generator_convolution_forward_avx512.h  (+507 more)
tests/: .gitignore  CMakeLists.txt  Makefile  README.md  atomics.c  atomics.vcxproj  benchmark.cpp  blas.c  blas.vcxproj  build.sh  colmajor.c  colmajor.vcxproj  convert.c  convert.vcxproj  convert_bf16_rnaz.mhd  convert_bf16_rne.mhd  convert_bf16_truncate.mhd  convert_bf8_rne.mhd  convert_bf8_stochastic.mhd  convert_f16_rne.mhd  convert_hf8_rne.mhd  descriptor.c  descriptor.vcxproj  diff.c  diff.vcxproj  dispatch.c  dispatch.sh  dispatch.vcxproj  eltwise.sh  equation.sh  fsspmdm.sh  functor.cpp  functor.vcxproj  gemm.c  gemm.vcxproj  gemmbatch.c  gemmbatch.vcxproj  gemmflags.c  gemmflags.vcxproj  hash.c  (+50 more)
(+25253 files in other folders)
